# JskToolBox

./: .gitignore  .prettierignore  .prettierrc  .readthedocs.yaml  AGENTS-PYTEMPLATE-QUICKSTART.md  AGENTS-PYTEMPLATE-README.md  AGENTS-PYTEMPLATE.md  AGENTS.md  AI_AGENT_GUIDE.md  AI_README.md  DOCSTRING_AUDIT_REPORT.md  DOCUMENTATION_SUMMARY.md  DOKUMENTACJA_PL.md  EXAMPLES_FOR_AI.md  GEMINI.md  Makefile  PREFERRED_IMPORTS.md  PUBLISHING_DOCS.md  README.md  TODO  TODO.md  TYPE_HINTS_AUDIT_REPORT.md  TYPE_HINTS_SOLUTION.md  ToolBox.wpr  generate_docs.py  logs_test.py  package-lock.json  pyproject.toml  requirements.txt
docs/: AttribTool.md  BaseTool.md  ConfigTool.md  DateTool.md  Devices.md  LogsTool.md  NetAddressTool.md  NetAddressTool4.md  NetAddressTool6.md  NetTool.md  RaiseTool.md  StringTool.md  SystemTool.md  TkTool.md
docs_api/: README.md  requirements.txt
examples/: example_log.py  example_log_02.py  example_thbaseobject_override_guard.py  import pytest.py
jsktoolbox/: __init__.py  datetool.py  nettool.py  raisetool.py  systemtool.py
tests/: connector_test.py  logs_test.py  parser_test.py  path_1.py  path_2.py  path_tests.py  test_address.py  test_attribtool.py  test_base_ddata.py  test_basetool.py  test_basetool_bdata.py  test_basetool_logs.py  test_basetool_threads.py  test_configtool.py  test_configtool_data_model.py  test_configtool_dataprocessor.py  test_configtool_fileprocessor.py  test_configtool_type_hints.py  test_datetool.py  test_device_network_connectors.py  test_devices_ddata.py  test_devices_libs_and_mikrotik.py  test_edmctool_data.py  (+34 more)
(+95 files in other folders)
