[tool.poetry]
name = "jsktoolbox"
version = "1.2.dev"
description = "Small sets of classes for various operations."
authors = ["Jacek 'Szumak' Kotlarski <szumak@virthost.pl>"]
maintainers = ["Jacek 'Szumak' Kotlarski <szumak@virthost.pl>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Szumak75/JskToolBox"
classifiers = [
        "Programming Language :: Python :: 3",
        "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.4"
urllib3 = "^2.5.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^7.4.4"
typing-extensions = "^4.12.2"
pycodestyle = "^2.12.0"
pydocstyle = "^6.3.0"
sphinx = "<8"
sphinx-autodoc-typehints = "<2"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate-docs = "generate_docs:main"

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | examples
)/
'''
